tests/ui/target_modifiers/incompatible_min_function_alignment.error_mismatch.stderr
error: mixing `-Zmin-function-alignment` will cause an ABI mismatch in crate `incompatible_min_function_alignment`
  --> $DIR/incompatible_min_function_alignment.rs:13:1
   |
LL | #![feature(no_core)]
   | ^
   |
   = help: the `-Zmin-function-alignment` flag modifies the ABI so Rust crates compiled with different values of this flag cannot be used together safely
   = note: `-Zmin-function-alignment=4` in this crate is incompatible with `-Zmin-function-alignment=32` in dependency `min_function_alignment`
   = help: set `-Zmin-function-alignment=32` in this crate or `-Zmin-function-alignment=4` in `min_function_alignment`
   = help: if you are sure this will not cause problems, you may use `-Cunsafe-allow-abi-mismatch=min-function-alignment` to silence this error

error: aborting due to 1 previous error

